// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component Should Render the component with ordered list of emails 1`] = `
<div>
  <div
    class="awesomemotive-settings-container-fluid"
  >
    <div
      class="awesomemotive-container-list"
    >
      <h2>
        Emails
      </h2>
    </div>
    <div
      class="awesomemotive-container-list"
    >
      <ul>
        <li>
          test@test.com
        </li>
        <li>
          emial@email.com
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table Component Should Render the component with table containing data 1`] = `
<div>
  <div
    class="awesomemotive-settings-container-fluid"
  >
    <div
      class="awesomemotive-container-table"
    >
      <table
        cellpadding="0"
        cellspacing="0"
      >
        <caption>
          Testing Table
        </caption>
        <thead>
          <tr>
            <td>
              ID
            </td>
            <td>
              URL
            </td>
            <td>
              Title
            </td>
            <td>
              Page Views
            </td>
            <td>
              Date
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              1
            </td>
            <td>
              https://google.com
            </td>
            <td>
              Google co in
            </td>
            <td>
              122
            </td>
            <td>
              Thu, 14 Jul 2022 19:28:14 GMT
            </td>
          </tr>
          <tr>
            <td>
              2
            </td>
            <td>
              https://google2.com
            </td>
            <td>
              Google 2 co in
            </td>
            <td>
              130
            </td>
            <td>
              Thu, 14 Jul 2022 19:28:14 GMT
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="awesomemotive-container-list"
    >
      <h2>
        Emails
      </h2>
    </div>
    <div
      class="awesomemotive-container-list"
    >
      <ul>
        <li>
          test@test.com
        </li>
        <li>
          emial@email.com
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table Component Should Render the default component with empty props 1`] = `
<div>
  <div
    class="awesomemotive-settings-container-fluid"
  >
    <div
      class="awesomemotive-container-list"
    >
      <h2>
        Emails
      </h2>
    </div>
    <div
      class="awesomemotive-container-list"
    />
  </div>
</div>
`;
